Fixed some css layout issues on french results page.

--- a/app/scss/brands/maytag/_app-main-mt.scss
+++ b/app/scss/brands/maytag/_app-main-mt.scss
@@ -276,6 +276,7 @@
 			width: 44px;
 			height: 40px;
 			font-size: 10px;
+			text-align: center;
 			//padding: 3px 18px;
 			padding-left: 5px;
 		    padding-top: 10px;
@@ -303,6 +304,7 @@
 			//padding: 3px 18px;
 			padding-left: 6px;
 		    padding-top: 8px;
+		    text-align: center;
 		    line-height: 1;
 			line-spacing: 1;
 			text-transform: uppercase;
@@ -366,6 +368,9 @@
 	height: 380px;
 	margin-top: -25px;
 }
+
+
+
 .slidey {
 	position: absolute;
 	left: -(1160px / 2);
@@ -465,5 +470,18 @@
 		transform: translateX(200%);
 		-webkit-transform: translateX(200%);
 		opacity: 0;
+	}
+}
+
+/*french css start*/
+.body[ng-class="fr_CA"] {
+	.app-content-main-bottom {
+		.btn-backtoresults, .btn-startover {
+			width: 55px !important;
+		}
+
+		.btn-startover {
+			line-height: 22px !important;
+		}
 	}
 }
